[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justdays"
version = "1.8.1"
description = "Makes working with days super easy"
readme = "README.md"
authors = [{ name = "HP Harmsen", email = "hp@harmsen.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["days", "adding days", "difference between days", "range of days", "last Monday"]
dependencies = [
    "python-dateutil",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/hpharmsen/justdays"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["justdays"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test_justdays"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)