[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpteasy"
version = "1.3.2"
description = "Makes working with OpenAi's GPT API super easy"
readme = "README.md"
authors = [{ name = "HP Harmsen", email = "hp@harmsen.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ChatGPT", "GPT4", "GPT3.5", "api"]
dependencies = [
    "openai",
    "tenacity",
    "python-dateutil",
    "python-dotenv",
    "rich",
    "tenacity",
    "requests"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pytest", "build", "twine", "nox"]

[project.urls]
Homepage = "https://github.com/hpharmsen/gpteasy"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["gpteasy"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)